전적 기능 개선, 플로팅 부분 전 까지 구현